--- a/BulkAttachmentManagementPlugin/BulkAttachmentManagementPlugin/PluginControl.resx
+++ b/BulkAttachmentManagementPlugin/BulkAttachmentManagementPlugin/PluginControl.resx
@@ -123,4 +123,10 @@
   <metadata name="sfdCSVFile.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>127, 17</value>
   </metadata>
+  <metadata name="fbdMainFile.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>235, 17</value>
+  </metadata>
+  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>41</value>
+  </metadata>
 </root>
